--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+.explanation-box{
+  padding: 5px;
+  height: 80px;
+  width: 510px;
+}
+
+.explanation-container{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .name-row{
   padding-left: 10px;
   padding-right: 0px;
