--- a/css/styles.css
+++ b/css/styles.css
@@ -305,13 +305,15 @@ input[type=radio]+label>img {
 }
 
 .submit-button {
-  height: 35px;
-  font-size: 14px;
-  font-weight: bold;
-  text-align: center;
-  width: 25%;
   margin-left: auto;
   margin-right: auto;
+  width: 40%;
+  height: 43px;
+  background-color: #117A65;
+  font-size: 19px;
+  color: white;
+  border: 1px solid #117A65;
+  border-radius: 5px;
 }
 
 /* .chartdiv {
