--- a/css/styles.css
+++ b/css/styles.css
@@ -609,10 +609,12 @@ body {
 .send-button{
   text-align: center;
   width: 13%;
-  background-color: #117A65;
+  background-color: grey;
+  border: 1px solid grey;
+  /* background-color: #117A65; */
   font-size: 16px;
   color: white;
-  border: 1px solid #117A65;
+  /* border: 1px solid #117A65; */
   border-radius: 5px;
 }
 
