--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,12 @@
 .message-text{
-  margin-left: 21px;
+  margin-left: 4px;
   padding-right: 0px;
   background: beige;
   min-height: 60px;
+}
+
+.my-answer-text{
+  background: #D4EFDF ! important;
 }
 
 .joined{
