--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,12 @@ input[type=radio]+label>img {
   margin-right: auto;
 }
 
+.big-five-question-container{
+  width: 64%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .shaded-tr {
   background-color: #f2f2f2;
 }
