--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 .message-text{
-  margin-left: 4px;
+  margin-left: 9px;
+  width: 484px;
   padding-right: 0px;
   background: beige;
   min-height: 60px;
