--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,19 @@
   border-radius: 4px;
 }
 
+.updated-no-button{
+  width: 70%;
+  float: left;
+  text-align: center;
+  height: 43px;
+  background-color: #117A65;
+  font-size: 19px;
+  color: white;
+  border: 1px solid #117A65;
+  border-radius: 5px;
+  margin-left: 15%;
+}
+
 .text-red{
   color: red;
 }
