--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 .message-text{
   margin-left: 9px;
   width: 484px;
+  padding-left: 10px;
+  padding-top: 5px;
   padding-right: 0px;
   background: beige;
   min-height: 60px;
