--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,18 @@
   border-radius: 4px;
 }
 
+.timer{
+  margin-bottom:50px;
+  margin-left:3%;
+  padding:20px;
+  width:50%;
+  border: solid red;
+  color: red;
+  text-align: center;
+  font-size: 33px;
+  display: none;
+}
+
 .timestamp{
   font-size: 10px;
   text-align: right;
